--- a/css/losersclub.css
+++ b/css/losersclub.css
@@ -1,4 +1,4 @@
-
+/*
 @font-face {
     font-family: 'Mellony Dry Brush';
     src: url('mellony_dry_brush-webfont.ttf') format('ttf'),
@@ -8,11 +8,13 @@
     font-style: normal;
 
 }
+*/
 body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
 }
+
 h3 {
     font-family: 'Arial', sans-serif;
     font-weight: 400: 4rem;
@@ -91,7 +93,7 @@ nav {
 }
 
 /* Clear floats after the columns */
-.row:after {
+/* .row:after {
     content: "";
     display: table;
     clear: both;
@@ -156,4 +158,15 @@ nav {
 }
 #user-research {
   margin-top: 10vh;
+} */
+.navbar-color{
+  background: rgba(17, 24, 52, .75);
+}
+
+.navigation{
+    padding: 10px;
+    color: black;
+    font-size: 30px;
+    font-family: courier;
+    opacity:1;
 }
