--- a/css/losersclub.css
+++ b/css/losersclub.css
@@ -25,6 +25,7 @@ h3 {
     color: #111834;
     text-shadow: 1px 2px .5px #000000;
 }
+
 h2 {
     font-family: 'Arial', sans-serif;
     font-weight: 400: 4rem;
@@ -33,8 +34,10 @@ h2 {
     color: #000000;
     text-shadow: 1px 2px .5px #b6a3f7;
 }
+
 a {
-  color: #9F84BD;
+  font-family: sans-serif;
+  color: #ffffff;
 }
 p {
   font-size: 1.2em;
@@ -49,9 +52,20 @@ iframe {
 }
 nav {
   opacity: 0.9;
+  margin-left: auto;
 }
+
+.navigation{
+    padding: 10px;
+    color: white;
+    font-size: 30px;
+    font-family: sans-serif;
+    opacity:1;
+}
+
 .navbar-custom-color {
-  background-color: #9F84BD;
+    background: rgba(17, 24, 52, .75);
+    justify-content: space-around;
 }
 .rectangle {
   width: 100%;
@@ -161,14 +175,3 @@ nav {
 #user-research {
   margin-top: 10vh;
 } */
-.navbar-color{
-  background: rgba(17, 24, 52, .75);
-}
-
-.navigation{
-    padding: 10px;
-    color: black;
-    font-size: 30px;
-    font-family: courier;
-    opacity:1;
-}
