--- a/css/losersclub.css
+++ b/css/losersclub.css
@@ -27,7 +27,7 @@ h3 {
 }
 
 h2 {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Helvetica', sans-serif;
     font-weight: 400: 4rem;
     font-size: 5rem;
     margin-bottom: -15px
@@ -36,17 +36,16 @@ h2 {
 }
 
 a {
-  font-family: sans-serif;
+  font-family: "Verdana";
   color: #ffffff;
 }
 p {
-  font-size: 1.2em;
+  font-family:"Verdana";
+  font-size: 1.25em;
   color: #000000;
 }
 
-pGraphics {
-  font-size: 1em;
-}
+
 iframe {
   width: 100%;
   height: 50%;
@@ -59,8 +58,8 @@ nav {
 .navigation{
     padding: 10px;
     color: white;
-    font-size: 30px;
-    font-family: sans-serif;
+    font-size: 1em;
+    font-family: "Verdana";
     opacity:1;
 }
 
@@ -79,7 +78,7 @@ nav {
   height: 10vh;
 }
 .text-block {
-  width: 50vw;
+  width: auto;
 }
 .full-video-container {
   margin-left: 2vw;
@@ -110,6 +109,13 @@ nav {
     float: left;
     width: 50%;
 }
+
+.block {
+  overflow: hidden;
+  padding:10px;
+  margin-top:10px;
+  height:auto;
+  background-color:#f9f9f9; }
 
 /* Clear floats after the columns */
 /* .row:after {
