--- a/css/losersclub.css
+++ b/css/losersclub.css
@@ -45,7 +45,6 @@ p {
   color: #000000;
 }
 
-
 iframe {
   width: 100%;
   height: 50%;
@@ -53,6 +52,13 @@ iframe {
 nav {
   opacity: 0.9;
   margin-left: auto;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
 .navigation{
@@ -67,7 +73,6 @@ nav {
     background: rgba(17, 24, 52, .75);
     justify-content: space-around;
 }
-
 
 .rectangle {
   width: 100%;
