--- a/css/losersclub.css
+++ b/css/losersclub.css
@@ -24,6 +24,7 @@ h3 {
     margin-bottom: -15px
     color: #111834;
     text-shadow: 1px 2px .5px #000000;
+    text-align: center;
 }
 
 h2 {
@@ -40,6 +41,12 @@ a {
   color: #ffffff;
 }
 p {
+  font-family:"Verdana";
+  font-size: 1.25em;
+  color: #000000;
+}
+
+b {
   font-family:"Verdana";
   font-size: 1.25em;
   color: #000000;
@@ -122,70 +129,21 @@ nav {
   height:auto;
   background-color:#f9f9f9; }
 
-/* Clear floats after the columns */
-/* .row:after {
+
+.row:after {
     content: "";
     display: table;
     clear: both;
 }
 
-#home {
-  height: 100vh;
-  overflow: hidden;
-  margin-top: 7vh;
-}
 #about {
-}
-#film {
-  width: 100vw;
-}
-#code {
-  text-align: right;
-}
-
-#contact {
-  margin-top: 20vh;
-  margin-bottom: 50vh;
   text-align: center;
 }
-#landing-img {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%
+#demo {
+  text-align: center;
+  width: 100vw;
 }
-#landing-img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+#team {
+  text-align: center;
+  width: 100vw;
 }
-#github-img {
-  max-width: 10vw;
-}
-#brand {
-  font-family: 'Arial', sans-serif;
-}
-#icons-img {
-  max-width: 30vw;
-}
-#profile-img{
-  max-width:35vw;
-}
-#graphicsPortrait-img{
-  max-height:35vw;
-}
-#graphicsLandscape-img{
-  max-width:45vw;
-}
-
-#film-header {
-  margin-left: auto;
-  margin-right: auto;
-}
-#brand {
-  font-family: 'Arial', sans-serif;
-  text-shadow: 1px 2px .5px black;
-}
-#user-research {
-  margin-top: 10vh;
-} */
